# in4viz

./: .eslintrc.js  .gitignore  README.md  SPEC.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
_failed/: .prettierrc.json  package.json
_failed/examples/: README.md  basic-usage.js  browser-demo.html  debug-test.html  er-basic-usage.js  simple-test.html  start-er-demo.sh
examples/: README.md  basic_usage.py  bgcolor_test.py  browser-demo.html  cdn-in4viz-demo.html  complex_ecommerce.py  complex_social_media.py  drawio_example.py  er-browser-demo.html  final-er-demo.html  isolated_nodes_test.py  path-test.html  start-demo.sh  svg_example.py
plan2/: README.md  example.py  pyproject.toml
plan2/in4viz/: __init__.py  drawio_canvas.py  drawio_generator.py  drawio_rendering.py  drawio_stencil.py  er_diagram.py
planning/: .gitignore  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml
planning/in4viz/: __init__.py  canvas.py
planning/planning/: __init__.py  diagram.py  er_diagram.py  models.py  rendering.py  stencil.py
