[project]
name = "in4viz"
version = "0.1.0"
description = "Python library for ER diagram visualization with draw.io XML output"
authors = [
    {name = "tamuto", email = "mutomob@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
keywords = ["er-diagram", "visualization", "drawio", "database", "diagram", "entity-relationship"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/tamuto/in4viz"
Repository = "https://github.com/tamuto/in4viz"
Issues = "https://github.com/tamuto/in4viz/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
